fix: Ensure correct image paths in JavaScript files and style reset button for dark mode

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -147,6 +147,13 @@
   transition: all 0.3s;
 }
 .reset:hover {
-  box-shadow: 0 2.4rem 4.8rem transparent;
   background-color: #fff;
+  box-shadow: 0 2.4rem 4.8rem transparent;
+}
+.app:has(.dark) .reset {
+  border: 1px solid hsl(237, 14%, 26%);
+  background-color: hsl(235, 24%, 19%);
+}
+.app:has(.dark) .reset:hover {
+  background-color: hsl(235, 21%, 11%);
 }
